--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="images/frame.png" />
     <title>Gamer Landing Page Website Assignment No. 2</title>
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header section -->
+    <header>
+      <nav>
+        <div class="logo">
+          <img src="images/frame.png" alt="" />
+          <h3><span>G</span>amer</h3>
+        </div>
+        <div class="menu">
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Developers</a></li>
+            <li>
+              <a href="#">
+                <button>
+                  <span>Follow Us On</span>
+                  <img src="images/youtube.svg" alt="" />
+                  <img src="images/tik-tok.svg" alt="" />
+                </button>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
