--- a/index.html
+++ b/index.html
@@ -31,6 +31,29 @@
           </ul>
         </div>
       </nav>
+      <img class="fill-img" src="images/group-14.png" alt="" />
+      <div class="banner">
+        <div class="b-content">
+          <h2>PLAY LIKE THE</h2>
+          <h1>G.0.A.T.</h1>
+          <p>
+            <img src="images/small/1-click.svg" alt="" /> 1-click instant play
+          </p>
+          <p>
+            <img src="images/small/download.svg" alt="" />
+            No Download
+          </p>
+          <p>
+            <img src="images/small/player.svg" alt="" />
+            1000s of supported online games
+          </p>
+          <button class="one">SIGN IN</button>
+          <button class="two">GO ROGUE</button>
+        </div>
+        <div class="b-image">
+          <img src="images/group-18.png" alt="" />
+        </div>
+      </div>
     </header>
     <main></main>
     <footer></footer>
