added games section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,62 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="games">
+        <div class="g-content">
+          <h2>Online Games <span> Funny Videos</span></h2>
+          <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+        </div>
+        <div class="card-container">
+          <div class="card">
+            <div class="hover">
+              <img src="images/rectangle-4.png" alt="" />
+
+              <div class="center-content">
+                <img src="images/play-button.svg" alt="" />
+                <a href="#">Watch Now</a>
+              </div>
+            </div>
+
+            <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+          </div>
+
+          <div class="card">
+            <div class="hover">
+              <img src="images/rectangle-5.png" alt="" />
+
+              <div class="center-content">
+                <img src="images/play-button.svg" alt="" />
+                <a href="#">Watch Now</a>
+              </div>
+            </div>
+            <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+          </div>
+          <div class="card">
+            <div class="hover">
+              <img src="images/rectangle-4.png" alt="" />
+
+              <div class="center-content">
+                <img src="images/play-button.svg" alt="" />
+                <a href="#">Watch Now</a>
+              </div>
+            </div>
+            <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+          </div>
+          <div class="card">
+            <div class="hover">
+              <img src="images/rectangle-6.png" alt="" />
+
+              <div class="center-content">
+                <img src="images/play-button.svg" alt="" />
+                <a href="#">Watch Now</a>
+              </div>
+            </div>
+            <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
