added butons section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       </div>
     </header>
     <main>
+      <!-- games section -->
       <section class="games">
         <div class="g-content">
           <h2>Online Games <span> Funny Videos</span></h2>
@@ -107,6 +108,52 @@
               </div>
             </div>
             <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+          </div>
+        </div>
+      </section>
+      <!-- games button -->
+      <section class="buttons">
+        <div class="button-container">
+          <div class="grid-container-one">
+            <button>
+              <img src="images/rectangle-11.png" alt="" />
+              <p>Action Games</p>
+            </button>
+            <button>
+              <img src="images/rectangle-12.png" alt="" />
+              <p>Adventure Games</p>
+            </button>
+            <button>
+              <img src="images/rectangle-13.png" alt="" />
+              <p>Arcade Games</p>
+            </button>
+            <button>
+              <img src="images/rectangle-14.png" alt="" />
+              <p>Educational Games</p>
+            </button>
+            <button>
+              <img src="images/rectangle-15.png" alt="" />
+              <p>Word Games</p>
+            </button>
+          </div>
+
+          <div class="grid-container-two">
+            <button>
+              <img src="images/rectangle-16.png" alt="" />
+              <p>Role Playing Games</p>
+            </button>
+            <button>
+              <img src="images/rectangle-17.png" alt="" />
+              <p>Music & Audio Games</p>
+            </button>
+            <button>
+              <img src="images/rectangle-18.png" alt="" />
+              <p>Puzzle Games</p>
+            </button>
+            <button>
+              <img src="images/rectangle-19.png" alt="" />
+              <p>Strategy Games</p>
+            </button>
           </div>
         </div>
       </section>
