complete footer siction for desktop

--- a/index.html
+++ b/index.html
@@ -158,6 +158,39 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <!-- footer section -->
+    <footer>
+      <div class="title">
+        <img src="images/frame.png" alt="" />
+        <h3><span>G</span>amer</h3>
+      </div>
+      <div class="links">
+        <ul>
+          <li><a href="#">Our Story</a></li>
+          <li><a href="#">Games</a></li>
+          <li><a href="#">Web Games</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">My Account</a></li>
+        </ul>
+      </div>
+      <div class="social-img">
+        <img src="images/twitter.svg" alt="" />
+        <img src="images/facebook.svg" alt="" />
+        <img src="images/youtube-white.svg" alt="" />
+        <img src="images/linkedin.svg" alt="" />
+        <img src="images/instagram.svg" alt="" />
+        <img src="images/apple.svg" alt="" />
+      </div>
+      <div class="footer-policy">
+        <a href="#">Tearms and Conditions</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Cookie Policy</a>
+        <a href="#">Privacy Settings</a>
+      </div>
+      <div class="copy-wright">
+        <p>Play Game @ Gamer @ 2000-2030 Gamer Bangladesh</p>
+      </div>
+    </footer>
   </body>
 </html>
