complete responsive for nav and banner

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="images/frame.png" />
     <title>Gamer Landing Page Website Assignment No. 2</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/responsive.css" />
   </head>
   <body>
     <!-- header section -->
@@ -31,7 +32,7 @@
           </ul>
         </div>
       </nav>
-      <img class="fill-img" src="images/group-14.png" alt="" />
+      <!-- <img class="fill-img" src="images/group-14.png" alt="" /> -->
       <div class="banner">
         <div class="b-content">
           <h2>PLAY LIKE THE</h2>
@@ -47,8 +48,10 @@
             <img src="images/small/player.svg" alt="" />
             1000s of supported online games
           </p>
-          <button class="one">SIGN IN</button>
-          <button class="two">GO ROGUE</button>
+          <div class="banner-btn">
+            <button class="one">SIGN IN</button>
+            <button class="two">GO ROGUE</button>
+          </div>
         </div>
         <div class="b-image">
           <img src="images/group-18.png" alt="" />
