--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </ul>
         </div>
       </nav>
-      <!-- <img class="fill-img" src="images/group-14.png" alt="" /> -->
+
       <div class="banner">
         <div class="b-content">
           <h2>PLAY LIKE THE</h2>
@@ -58,6 +58,7 @@
         </div>
       </div>
     </header>
+
     <main>
       <!-- games section -->
       <section class="games">
@@ -92,7 +93,7 @@
           </div>
           <div class="card">
             <div class="hover">
-              <img src="images/rectangle-4.png" alt="" />
+              <img src="images/rectangle-7.png" alt="" />
 
               <div class="center-content">
                 <img src="images/play-button.svg" alt="" />
@@ -114,7 +115,9 @@
           </div>
         </div>
       </section>
-      <!-- games button -->
+
+      <!-- buttons section -->
+
       <section class="buttons">
         <div class="button-container">
           <div class="grid-container-one">
@@ -122,19 +125,23 @@
               <img src="images/rectangle-11.png" alt="" />
               <p>Action Games</p>
             </button>
+
             <button>
               <img src="images/rectangle-12.png" alt="" />
               <p>Adventure Games</p>
             </button>
+
             <button>
               <img src="images/rectangle-13.png" alt="" />
               <p>Arcade Games</p>
             </button>
-            <button>
+
+            <button class="small">
               <img src="images/rectangle-14.png" alt="" />
               <p>Educational Games</p>
             </button>
-            <button>
+
+            <button class="small">
               <img src="images/rectangle-15.png" alt="" />
               <p>Word Games</p>
             </button>
@@ -145,13 +152,30 @@
               <img src="images/rectangle-16.png" alt="" />
               <p>Role Playing Games</p>
             </button>
+
             <button>
               <img src="images/rectangle-17.png" alt="" />
               <p>Music & Audio Games</p>
             </button>
+
             <button>
               <img src="images/rectangle-18.png" alt="" />
               <p>Puzzle Games</p>
+            </button>
+
+            <button class="small">
+              <img src="images/rectangle-19.png" alt="" />
+              <p>Strategy Games</p>
+            </button>
+          </div>
+          <div class="hidden-grid-container">
+            <button>
+              <img src="images/rectangle-14.png" alt="" />
+              <p>Educational Games</p>
+            </button>
+            <button>
+              <img src="images/rectangle-15.png" alt="" />
+              <p>Word Games</p>
             </button>
             <button>
               <img src="images/rectangle-19.png" alt="" />
@@ -161,6 +185,7 @@
         </div>
       </section>
     </main>
+
     <!-- footer section -->
     <footer>
       <div class="title">
