--- a/index.html
+++ b/index.html
@@ -116,6 +116,25 @@
         </div>
       </section>
 
+      <!-- play now section -->
+      <section class="play-now">
+        <div class="p-content">
+          <h2>
+            <span>Play Instantly,</span><br />
+            No Downloads<br />
+            No Installs.
+          </h2>
+          <p>
+            Play games online for free without downloading. Just click the Play
+            button and play instantly in your browser.
+          </p>
+        </div>
+        <div class="p-image">
+          <img src="images/rectangle-55.png" alt="" />
+          <img src="images/rectangle-66.png" alt="" />
+        </div>
+      </section>
+
       <!-- buttons section -->
 
       <section class="buttons">
@@ -123,63 +142,63 @@
           <div class="grid-container-one">
             <button>
               <img src="images/rectangle-11.png" alt="" />
-              <p>Action Games</p>
+              Action Games
             </button>
 
             <button>
               <img src="images/rectangle-12.png" alt="" />
-              <p>Adventure Games</p>
+              Adventure Games
             </button>
 
             <button>
               <img src="images/rectangle-13.png" alt="" />
-              <p>Arcade Games</p>
+              Arcade Games
             </button>
 
             <button class="small">
               <img src="images/rectangle-14.png" alt="" />
-              <p>Educational Games</p>
+              Educational Games
             </button>
 
             <button class="small">
               <img src="images/rectangle-15.png" alt="" />
-              <p>Word Games</p>
+              Word Games
             </button>
           </div>
 
           <div class="grid-container-two">
             <button>
               <img src="images/rectangle-16.png" alt="" />
-              <p>Role Playing Games</p>
+              Role Playing Games
             </button>
 
             <button>
               <img src="images/rectangle-17.png" alt="" />
-              <p>Music & Audio Games</p>
+              Music & Audio Games
             </button>
 
             <button>
               <img src="images/rectangle-18.png" alt="" />
-              <p>Puzzle Games</p>
+              Puzzle Games
             </button>
 
             <button class="small">
               <img src="images/rectangle-19.png" alt="" />
-              <p>Strategy Games</p>
+              Strategy Games
             </button>
           </div>
           <div class="hidden-grid-container">
             <button>
               <img src="images/rectangle-14.png" alt="" />
-              <p>Educational Games</p>
+              Educational Games
             </button>
             <button>
               <img src="images/rectangle-15.png" alt="" />
-              <p>Word Games</p>
+              Word Games
             </button>
             <button>
               <img src="images/rectangle-19.png" alt="" />
-              <p>Strategy Games</p>
+              Strategy Games
             </button>
           </div>
         </div>
@@ -203,12 +222,24 @@
         </ul>
       </div>
       <div class="social-img">
-        <img src="images/twitter.svg" alt="" />
-        <img src="images/facebook.svg" alt="" />
-        <img src="images/youtube-white.svg" alt="" />
-        <img src="images/linkedin.svg" alt="" />
-        <img src="images/instagram.svg" alt="" />
-        <img src="images/apple.svg" alt="" />
+        <button class="social-btn">
+          <img src="images/twitter.svg" alt="" />
+        </button>
+        <button class="social-btn">
+          <img src="images/facebook.svg" alt="" />
+        </button>
+        <button class="social-btn">
+          <img src="images/youtube-white.svg" alt="" />
+        </button>
+        <button class="social-btn">
+          <img src="images/linkedin.svg" alt="" />
+        </button>
+        <button class="social-btn">
+          <img src="images/instagram.svg" alt="" />
+        </button>
+        <button class="social-btn">
+          <img src="images/apple.svg" alt="" />
+        </button>
       </div>
       <div class="footer-policy">
         <a href="#">Tearms and Conditions</a>
