--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <a href="#">Watch Now</a>
               </div>
             </div>
-            <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+            <p>Did you score? #unblockedgames #school</p>
           </div>
           <div class="card">
             <div class="hover">
@@ -100,7 +100,7 @@
                 <a href="#">Watch Now</a>
               </div>
             </div>
-            <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+            <p>Breaking game records like OG</p>
           </div>
           <div class="card">
             <div class="hover">
@@ -111,7 +111,7 @@
                 <a href="#">Watch Now</a>
               </div>
             </div>
-            <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+            <p>Busted gaming on school laptop, but you are still lit.</p>
           </div>
         </div>
       </section>
